# soundfont-server

./: .gitignore  .gitmodules  README.md
.github/workflows/: emscripten.yml  main.yml
sfcomposer/: CMakeLists.txt  package.in.json
sfcomposer/src/: CMakeLists.txt  com.h  main.cpp  sfcompose.cpp  sfsplit.cpp
sfcomposer/src/dat/: dat.h
sfcomposer/src/sf3/: myclasses.h  mydef.h  myfile.cpp  myfile.h  mylist.h  mystring.cpp  mystring.h  mysysinfo.cpp  mysysinfo.h  sfont.cpp  sfont.h
soundfonts/FluidR3_GM/: FluidR3_GM.sf2.0.smpl  FluidR3_GM.sf2.1.smpl  FluidR3_GM.sf2.10.smpl  FluidR3_GM.sf2.100.smpl  FluidR3_GM.sf2.1001.smpl  FluidR3_GM.sf2.1003.smpl  FluidR3_GM.sf2.1004.smpl  FluidR3_GM.sf2.1006.smpl  FluidR3_GM.sf2.1007.smpl  FluidR3_GM.sf2.1008.smpl  FluidR3_GM.sf2.101.smpl  FluidR3_GM.sf2.1011.smpl  FluidR3_GM.sf2.1012.smpl  FluidR3_GM.sf2.1013.smpl  FluidR3_GM.sf2.1015.smpl  FluidR3_GM.sf2.1016.smpl  FluidR3_GM.sf2.1018.smpl  FluidR3_GM.sf2.1019.smpl  FluidR3_GM.sf2.1021.smpl  FluidR3_GM.sf2.1022.smpl  FluidR3_GM.sf2.1023.smpl  FluidR3_GM.sf2.1024.smpl  FluidR3_GM.sf2.1025.smpl  FluidR3_GM.sf2.1026.smpl  FluidR3_GM.sf2.1027.smpl  FluidR3_GM.sf2.1028.smpl  FluidR3_GM.sf2.1029.smpl  FluidR3_GM.sf2.1031.smpl  FluidR3_GM.sf2.1035.smpl  FluidR3_GM.sf2.1036.smpl  FluidR3_GM.sf2.1038.smpl  FluidR3_GM.sf2.1039.smpl  FluidR3_GM.sf2.1040.smpl  FluidR3_GM.sf2.1041.smpl  FluidR3_GM.sf2.1043.smpl  FluidR3_GM.sf2.1045.smpl  FluidR3_GM.sf2.1046.smpl  FluidR3_GM.sf2.1047.smpl  FluidR3_GM.sf2.1049.smpl  FluidR3_GM.sf2.1055.smpl  (+898 more)
soundfonts/FluidR3_GM_EX/: FluidR3_GM_EX.sf2.1000.smpl  FluidR3_GM_EX.sf2.1002.smpl  FluidR3_GM_EX.sf2.1005.smpl  FluidR3_GM_EX.sf2.1009.smpl  FluidR3_GM_EX.sf2.1010.smpl  FluidR3_GM_EX.sf2.1014.smpl  FluidR3_GM_EX.sf2.1017.smpl  FluidR3_GM_EX.sf2.102.smpl  FluidR3_GM_EX.sf2.1020.smpl  FluidR3_GM_EX.sf2.103.smpl  FluidR3_GM_EX.sf2.1030.smpl  FluidR3_GM_EX.sf2.1032.smpl  FluidR3_GM_EX.sf2.1033.smpl  FluidR3_GM_EX.sf2.1034.smpl  FluidR3_GM_EX.sf2.1037.smpl  FluidR3_GM_EX.sf2.104.smpl  FluidR3_GM_EX.sf2.1042.smpl  FluidR3_GM_EX.sf2.1044.smpl  FluidR3_GM_EX.sf2.1048.smpl  FluidR3_GM_EX.sf2.105.smpl  FluidR3_GM_EX.sf2.1050.smpl  (+864 more)
(+4739 files in other folders)
